crates/mabo-parser/tests/snapshots/parser__parse@enum_generics.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Enum with generics.\nenum Sample<A, B, C, D> {\n    One @1,\n    Two(A @1, B @2) @2,\n    Three {\n        field1: C @1,\n        field2: D @2,\n    } @3,\n}"
input_file: crates/mabo-parser/tests/inputs/enum_generics.mabo
---
Schema {
    path: Some(
        "enum_generics.mabo",
    ),
    source: "/// Enum with generics.\nenum Sample<A, B, C, D> {\n    One @1,\n    Two(A @1, B @2) @2,\n    Three {\n        field1: C @1,\n        field2: D @2,\n    } @3,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Enum(
            Enum {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Enum with generics.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Enum,
                name: Name {
                    value: "Sample",
                },
                generics: Some(
                    Generics {
                        angle: Angle,
                        types: Punctuated {
                            values: [
                                (
                                    Name {
                                        value: "A",
                                    },
                                    Comma,
                                ),
                                (
                                    Name {
                                        value: "B",
                                    },
                                    Comma,
                                ),
                                (
                                    Name {
                                        value: "C",
                                    },
                                    Comma,
                                ),
                            ],
                            last: (
                                Name {
                                    value: "D",
                                },
                                None,
                            ),
                        },
                    },
                ),
                brace: Brace,
                variants: Punctuated {
                    values: [
                        (
                            Variant {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "One",
                                },
                                fields: Unit,
                                id: Some(
                                    Id {
                                        value: 1,
                                    },
                                ),
                            },
                            Comma,
                        ),
                        (
                            Variant {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "Two",
                                },
                                fields: Unnamed(
                                    Parenthesis,
                                    Punctuated {
                                        values: [
                                            (
                                                UnnamedField {
                                                    ty: Type {
                                                        value: External(
                                                            ExternalType {
                                                                path: [],
                                                                name: Name {
                                                                    value: "A",
                                                                },
                                                                angle: None,
                                                                generics: None,
                                                            },
                                                        ),
                                                    },
                                                    id: Some(
                                                        Id {
                                                            value: 1,
                                                        },
                                                    ),
                                                },
                                                Comma,
                                            ),
                                        ],
                                        last: (
                                            UnnamedField {
                                                ty: Type {
                                                    value: External(
                                                        ExternalType {
                                                            path: [],
                                                            name: Name {
                                                                value: "B",
                                                            },
                                                            angle: None,
                                                            generics: None,
                                                        },
                                                    ),
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 2,
                                                    },
                                                ),
                                            },
                                            None,
                                        ),
                                    },
                                ),
                                id: Some(
                                    Id {
                                        value: 2,
                                    },
                                ),
                            },
                            Comma,
                        ),
                    ],
                    last: (
                        Variant {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "Three",
                            },
                            fields: Named(
                                Brace,
                                Punctuated {
                                    values: [
                                        (
                                            NamedField {
                                                comment: Comment(
                                                    [],
                                                ),
                                                name: Name {
                                                    value: "field1",
                                                },
                                                colon: Colon,
                                                ty: Type {
                                                    value: External(
                                                        ExternalType {
                                                            path: [],
                                                            name: Name {
                                                                value: "C",
                                                            },
                                                            angle: None,
                                                            generics: None,
                                                        },
                                                    ),
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 1,
                                                    },
                                                ),
                                            },
                                            Comma,
                                        ),
                                    ],
                                    last: (
                                        NamedField {
                                            comment: Comment(
                                                [],
                                            ),
                                            name: Name {
                                                value: "field2",
                                            },
                                            colon: Colon,
                                            ty: Type {
                                                value: External(
                                                    ExternalType {
                                                        path: [],
                                                        name: Name {
                                                            value: "D",
                                                        },
                                                        angle: None,
                                                        generics: None,
                                                    },
                                                ),
                                            },
                                            id: Some(
                                                Id {
                                                    value: 2,
                                                },
                                            ),
                                        },
                                        Some(
                                            Comma,
                                        ),
                                    ),
                                },
                            ),
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                        },
                        Some(
                            Comma,
                        ),
                    ),
                },
            },
        ),
    ],
}
