crates/mabo-parser/tests/snapshots/parser__parse@enum_min_ws.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "enum Sample<T>{One@1,Two(u32@1,u64@2,T@3)@2,Three{field1:u32@1,field2:bool@2,field3:T@3}@3}"
input_file: crates/mabo-parser/tests/inputs/enum_min_ws.mabo
---
Schema {
    path: Some(
        "enum_min_ws.mabo",
    ),
    source: "enum Sample<T>{One@1,Two(u32@1,u64@2,T@3)@2,Three{field1:u32@1,field2:bool@2,field3:T@3}@3}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Enum(
            Enum {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Enum,
                name: Name {
                    value: "Sample",
                },
                generics: Some(
                    Generics {
                        angle: Angle,
                        types: Punctuated {
                            values: [],
                            last: (
                                Name {
                                    value: "T",
                                },
                                None,
                            ),
                        },
                    },
                ),
                brace: Brace,
                variants: Punctuated {
                    values: [
                        (
                            Variant {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "One",
                                },
                                fields: Unit,
                                id: Some(
                                    Id {
                                        value: 1,
                                    },
                                ),
                            },
                            Comma,
                        ),
                        (
                            Variant {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "Two",
                                },
                                fields: Unnamed(
                                    Parenthesis,
                                    Punctuated {
                                        values: [
                                            (
                                                UnnamedField {
                                                    ty: Type {
                                                        value: U32,
                                                    },
                                                    id: Some(
                                                        Id {
                                                            value: 1,
                                                        },
                                                    ),
                                                },
                                                Comma,
                                            ),
                                            (
                                                UnnamedField {
                                                    ty: Type {
                                                        value: U64,
                                                    },
                                                    id: Some(
                                                        Id {
                                                            value: 2,
                                                        },
                                                    ),
                                                },
                                                Comma,
                                            ),
                                        ],
                                        last: (
                                            UnnamedField {
                                                ty: Type {
                                                    value: External(
                                                        ExternalType {
                                                            path: [],
                                                            name: Name {
                                                                value: "T",
                                                            },
                                                            angle: None,
                                                            generics: None,
                                                        },
                                                    ),
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 3,
                                                    },
                                                ),
                                            },
                                            None,
                                        ),
                                    },
                                ),
                                id: Some(
                                    Id {
                                        value: 2,
                                    },
                                ),
                            },
                            Comma,
                        ),
                    ],
                    last: (
                        Variant {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "Three",
                            },
                            fields: Named(
                                Brace,
                                Punctuated {
                                    values: [
                                        (
                                            NamedField {
                                                comment: Comment(
                                                    [],
                                                ),
                                                name: Name {
                                                    value: "field1",
                                                },
                                                colon: Colon,
                                                ty: Type {
                                                    value: U32,
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 1,
                                                    },
                                                ),
                                            },
                                            Comma,
                                        ),
                                        (
                                            NamedField {
                                                comment: Comment(
                                                    [],
                                                ),
                                                name: Name {
                                                    value: "field2",
                                                },
                                                colon: Colon,
                                                ty: Type {
                                                    value: Bool,
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 2,
                                                    },
                                                ),
                                            },
                                            Comma,
                                        ),
                                    ],
                                    last: (
                                        NamedField {
                                            comment: Comment(
                                                [],
                                            ),
                                            name: Name {
                                                value: "field3",
                                            },
                                            colon: Colon,
                                            ty: Type {
                                                value: External(
                                                    ExternalType {
                                                        path: [],
                                                        name: Name {
                                                            value: "T",
                                                        },
                                                        angle: None,
                                                        generics: None,
                                                    },
                                                ),
                                            },
                                            id: Some(
                                                Id {
                                                    value: 3,
                                                },
                                            ),
                                        },
                                        None,
                                    ),
                                },
                            ),
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                        },
                        None,
                    ),
                },
            },
        ),
    ],
}
